src/objects/Academic_Interest_Mapping__c.object
<CustomObject>
    <description>Mapping object that translates generic Interests (such as on an RFI when a student says they are interested in &quot;math&quot;) into the actual Program Account.</description>
    <fields>
        <fullName>Academic_Interest__c</fullName>
        <label>Academic Interest</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <filterItems>
                <field>Program__c.School_College__c</field>
                <operation>equals</operation>
                <value>Undergraduate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Academic Interest Mappings</relationshipLabel>
        <relationshipName>Academic_Interest_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <label>Academic Interest Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Academic_Interest__c</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Academic Interest Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academic Interest Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>